chore(build): fix build file and add license

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "sourceMap": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*", "tests/client.ts"],
+  "include": ["src/**/*"],
   "exclude": []
 }
