--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bitpanda-ws",
-  "version": "1.0.0",
-  "description": "Websocket client for BitPanda",
-  "main": "index.js",
+  "version": "0.0.0",
+  "description": "Node.js websocket client for BitPanda",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "test": "npm run build",
     "start": "ts-node tests/client.ts"
   },
   "keywords": [
@@ -12,10 +13,11 @@
     "websocket",
     "ws",
     "cryptocurrency",
-    "exchange"
+    "exchange",
+    "nodejs"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "IOfate",
+  "license": "MIT",
   "dependencies": {
     "emittery": "^0.9.2",
     "ws": "^7.5.3"
@@ -25,5 +27,11 @@
     "@types/ws": "^7.4.6",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "files": [
+    "dist/**/*.{js,ts,map}"
+  ],
+  "engines": {
+    "node": ">=14"
   }
 }
