--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitpanda-ws",
+  "name": "@iofate/bitpanda-ws",
   "version": "0.0.0",
   "description": "Node.js websocket client for BitPanda",
   "main": "dist/index.js",
